--- a/accounts-db/Cargo.toml
+++ b/accounts-db/Cargo.toml
@@ -8,6 +8,7 @@ repository = { workspace = true }
 homepage = { workspace = true }
 license = { workspace = true }
 edition = { workspace = true }
+rust-version = "1.76.0"
 
 [dependencies]
 bincode = { workspace = true }
