--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -36,7 +36,7 @@ solana-clock = { workspace = true, features = ["serde"] }
 solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
 solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
-solana-hash = { workspace = true }
+solana-hash = { workspace = true, features = ["borsh", "bytemuck", "serde"] }
 solana-hasher = { workspace = true }
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
