--- a/sdk/hash/Cargo.toml
+++ b/sdk/hash/Cargo.toml
@@ -28,6 +28,9 @@ thiserror = { workspace = true }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true }
 
+[build-dependencies]
+rustc_version = { workspace = true }
+
 [features]
 borsh = ["dep:borsh"]
 bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
