--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "cli-output",
     "client",
     "client-test",
+    "cluster-slots-service",
     "compute-budget",
     "connection-cache",
     "core",
@@ -342,6 +343,7 @@ solana-cli = { path = "cli", version = "=2.1.0" }
 solana-cli-config = { path = "cli-config", version = "=2.1.0" }
 solana-cli-output = { path = "cli-output", version = "=2.1.0" }
 solana-client = { path = "client", version = "=2.1.0" }
+solana-cluster-slots-service = { path = "cluster-slots-service", version = "=2.1.0" }
 solana-compute-budget = { path = "compute-budget", version = "=2.1.0" }
 solana-compute-budget-program = { path = "programs/compute-budget", version = "=2.1.0" }
 solana-config-program = { path = "programs/config", version = "=2.1.0" }
