--- a/sdk/signature/Cargo.toml
+++ b/sdk/signature/Cargo.toml
@@ -13,7 +13,7 @@ edition = { workspace = true }
 bs58 = { workspace = true }
 ed25519-dalek = { workspace = true, optional = true }
 generic-array = { workspace = true, features = ["serde", "more_lengths"] }
-rand = { workspace = true }
+rand = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 solana-frozen-abi = { workspace = true, optional = true }
@@ -31,6 +31,7 @@ rustc_version = { workspace = true }
 
 [features]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+rand = ["dep:rand"]
 serde = ["dep:serde", "dep:serde_derive"]
 verify = ["dep:ed25519-dalek"]
 
