--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -86,6 +86,7 @@ sha3 = { workspace = true, optional = true }
 siphasher = { workspace = true }
 solana-bn254 = { workspace = true }
 solana-decode-error = { workspace = true }
+solana-derivation-path = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-program = { workspace = true }
@@ -96,7 +97,6 @@ solana-secp256k1-recover = { workspace = true }
 solana-serde-varint = { workspace = true }
 solana-short-vec = { workspace = true }
 thiserror = { workspace = true }
-uriparse = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.1", features = ["wasm-bindgen"] }
