--- a/sdk/signature/Cargo.toml
+++ b/sdk/signature/Cargo.toml
@@ -23,6 +23,7 @@ thiserror = { workspace = true }
 
 [dev-dependencies]
 curve25519-dalek = { workspace = true }
+ed25519-dalek = { workspace = true }
 solana-program = { workspace = true }
 
 [build-dependencies]
