--- a/rpc-response/Cargo.toml
+++ b/rpc-response/Cargo.toml
@@ -19,5 +19,8 @@ solana-transaction-status-client-types = { workspace = true }
 solana-version = { workspace = true }
 thiserror = { workspace = true }
 
+[dev-dependencies]
+serde_json = { workspace = true }
+
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
