--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -42,6 +42,7 @@ frozen-abi = [
     "dep:solana-frozen-abi-macro",
     "solana-program/frozen-abi",
     "solana-short-vec/frozen-abi",
+    "solana-signature/frozen-abi"
 ]
 
 [dependencies]
