--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -43,6 +43,7 @@ solana-perf = { workspace = true }
 solana-poh = { workspace = true }
 solana-rayon-threadlimit = { workspace = true }
 solana-rpc-client-api = { workspace = true }
+solana-rpc-filter = { workspace = true }
 solana-runtime = { workspace = true }
 solana-sdk = { workspace = true }
 solana-send-transaction-service = { workspace = true }
