--- a/rpc-filter/Cargo.toml
+++ b/rpc-filter/Cargo.toml
@@ -18,5 +18,9 @@ solana-inline-spl = { workspace = true }
 solana-sdk = { workspace = true }
 thiserror = { workspace = true }
 
+[dev-dependencies]
+const_format = { workspace = true }
+serde_json = { workspace = true }
+
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
