--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -92,7 +92,7 @@ sha3 = { workspace = true, optional = true }
 siphasher = { workspace = true }
 solana-account = { workspace = true, features = ["bincode"] }
 solana-bn254 = { workspace = true }
-solana-commitment-config = { workspace = true, optional = true }
+solana-commitment-config = { workspace = true, optional = true, features = ["serde"] }
 solana-decode-error = { workspace = true }
 solana-derivation-path = { workspace = true }
 solana-feature-set = { workspace = true }
