--- a/sdk/commitment-config/Cargo.toml
+++ b/sdk/commitment-config/Cargo.toml
@@ -10,8 +10,12 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
 thiserror = { workspace = true }
+
+[features]
+serde = ["dep:serde", "dep:serde_derive"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
