--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -35,7 +35,7 @@ solana-atomic-u64 = { workspace = true }
 solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
 solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
-solana-hash = { workspace = true, features = ["borsh", "bytemuck", "serde"] }
+solana-hash = { workspace = true, features = ["bytemuck", "serde"] }
 solana-hasher = { workspace = true }
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
@@ -98,7 +98,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["borsh"]
-borsh = ["dep:borsh", "dep:borsh0-10"]
+borsh = ["dep:borsh", "dep:borsh0-10", "solana-hash/borsh"]
 dev-context-only-utils = ["dep:qualifier_attr"]
 frozen-abi = [
     "dep:rustc_version",
