--- a/inline-spl/Cargo.toml
+++ b/inline-spl/Cargo.toml
@@ -11,7 +11,7 @@ edition = { workspace = true }
 
 [dependencies]
 bytemuck = { workspace = true }
-solana-program = { workspace = true }
+solana-program = { workspace = true, default-features = false }
 
 [lib]
 crate-type = ["lib"]
