--- a/merkle-tree/Cargo.toml
+++ b/merkle-tree/Cargo.toml
@@ -11,7 +11,8 @@ edition = { workspace = true }
 
 [dependencies]
 fast-math = { workspace = true }
-solana-program = { workspace = true }
+solana-hash = { workspace = true }
+solana-hasher = { workspace = true }
 
 [dev-dependencies]
 hex = { workspace = true }
