--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ members = [
     "rbpf-cli",
     "remote-wallet",
     "rpc",
+    "rpc-account-info-config",
     "rpc-client",
     "rpc-client-api",
     "rpc-client-nonce-utils",
@@ -394,12 +395,13 @@ solana-timings = { path = "timings", version = "=2.1.0" }
 solana-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=2.1.0" }
 solana-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=2.1.0" }
 solana-rpc = { path = "rpc", version = "=2.1.0" }
+solana-rpc-account-info-config = { path = "rpc-account-info-config", version = "=2.1.0" }
 solana-rpc-client = { path = "rpc-client", version = "=2.1.0", default-features = false }
 solana-rpc-client-api = { path = "rpc-client-api", version = "=2.1.0" }
 solana-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=2.1.0" }
 solana-runtime = { path = "runtime", version = "=2.1.0" }
 solana-runtime-transaction = { path = "runtime-transaction", version = "=2.1.0" }
-solana-sdk = { path = "sdk", version = "=2.1.0" }
+solana-sdk = { path = "sdk", version = "=2.1.0", default-features = false }
 solana-sdk-macro = { path = "sdk/macro", version = "=2.1.0" }
 solana-secp256k1-recover = { path = "curves/secp256k1-recover", version = "=2.1.0", default-features = false }
 solana-send-transaction-service = { path = "send-transaction-service", version = "=2.1.0" }
