--- a/sdk/program-lite-split/Cargo.toml
+++ b/sdk/program-lite-split/Cargo.toml
@@ -33,6 +33,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 crate-type = ["cdylib", "rlib"]
 
 [features]
+curve = ["solana-pubkey/curve"]
 default = ["borsh"]
 borsh = [
     "solana-hash/borsh",
