--- a/sdk/program-lite-split/pubkey/Cargo.toml
+++ b/sdk/program-lite-split/pubkey/Cargo.toml
@@ -39,7 +39,7 @@ getrandom = { workspace = true, features = ["custom"] }
 solana-define-syscall = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
-curve25519-dalek = { workspace = true }
+curve25519-dalek = { workspace = true, optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = { workspace = true }
@@ -54,6 +54,7 @@ rustc_version = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
+curve = ["dep:curve25519-dalek"]
 default = ["borsh"]
 borsh = ["dep:borsh"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
