--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -41,6 +41,7 @@ frozen-abi = [
     "dep:solana-frozen-abi-macro",
     "solana-feature-set/frozen-abi",
     "solana-program/frozen-abi",
+    "solana-account/frozen-abi",
     "solana-short-vec/frozen-abi",
     "solana-signature/frozen-abi"
 ]
