--- a/sdk/account/Cargo.toml
+++ b/sdk/account/Cargo.toml
@@ -15,10 +15,22 @@ qualifier_attr = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
 serde_derive = { workspace = true }
+solana-frozen-abi = { workspace = true, optional = true }
+solana-frozen-abi-macro = { workspace = true, optional = true }
+solana-logger = { workspace = true, optional = true }
 solana-program = { workspace = true }
+
+[build-dependencies]
+rustc_version = { workspace = true }
 
 [features]
 dev-context-only-utils = ["dep:qualifier_attr"]
+frozen-abi = [
+    "dep:solana-frozen-abi",
+    "dep:solana-frozen-abi-macro",
+    "dep:solana-logger",
+    "solana-program/frozen-abi"
+]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
