--- a/Cargo.toml
+++ b/Cargo.toml
@@ -121,6 +121,7 @@ members = [
     "sdk/serde-varint",
     "sdk/sha256-hasher",
     "sdk/signature",
+    "sdk/transaction-error",
     "send-transaction-service",
     "short-vec",
     "stake-accounts",
@@ -462,6 +463,7 @@ solana-svm-transaction = { path = "svm-transaction", version = "=2.1.0" }
 solana-system-program = { path = "programs/system", version = "=2.1.0" }
 solana-test-validator = { path = "test-validator", version = "=2.1.0" }
 solana-thin-client = { path = "thin-client", version = "=2.1.0" }
+solana-transaction-error = { path = "sdk/transaction-error", version = "=2.1.0" }
 solana-tpu-client = { path = "tpu-client", version = "=2.1.0", default-features = false }
 solana-transaction-status = { path = "transaction-status", version = "=2.1.0" }
 solana-transaction-status-client-types = { path = "transaction-status-client-types", version = "=2.1.0" }
