--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -34,6 +34,7 @@ full = [
     "sha3",
     "digest",
     "solana-pubkey/rand",
+    "dep:solana-precompile-error"
 ]
 borsh = ["dep:borsh", "solana-program/borsh", "solana-secp256k1-recover/borsh"]
 dev-context-only-utils = ["qualifier_attr", "solana-account/dev-context-only-utils"]
@@ -97,6 +98,7 @@ solana-frozen-abi-macro = { workspace = true, optional = true, features = [
     "frozen-abi",
 ] }
 solana-native-token = { workspace = true }
+solana-precompile-error = { workspace = true, optional = true }
 solana-program = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-pubkey = { workspace = true, default-features = false, features = ["std"] }
