--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -113,6 +113,7 @@ solana-signature = { workspace = true, features = [
     "std",
     "verify",
 ], optional = true }
+solana-instruction = { workspace = true }
 thiserror = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
