--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -120,6 +120,7 @@ solana-signature = { workspace = true, features = [
     "verify",
 ], optional = true }
 solana-transaction-error = { workspace = true, features = ["serde"], optional = true }
+solana-timing-utils = { workspace = true }
 thiserror = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
