--- a/sdk/ed25519-instructions/Cargo.toml
+++ b/sdk/ed25519-instructions/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-ed25519-instruction"
+name = "solana-ed25519-instructions"
 description = "Instructions for the Solana ed25519 native program"
-documentation = "https://docs.rs/solana-ed25519-instruction"
+documentation = "https://docs.rs/solana-ed25519-instructions"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
@@ -16,6 +16,14 @@ ed25519-dalek = { workspace = true }
 solana-feature-set = { workspace = true }
 solana-instruction = { workspace = true, features = ["std"] }
 solana-precompile-error = { workspace = true }
+solana-pubkey = { workspace = true }
+
+[dev-dependencies]
+hex = { workspace = true }
+rand0-7 = { workspace = true }
+solana-hash = { workspace = true }
+solana-logger = { workspace = true }
+solana-sdk = { path = ".." }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
