--- a/sdk/secp256k1-instruction/Cargo.toml
+++ b/sdk/secp256k1-instruction/Cargo.toml
@@ -38,3 +38,5 @@ serde = ["dep:serde", "dep:serde_derive"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
