--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,7 +143,7 @@ members = [
     "sdk/slot-history",
     "sdk/stable-layout",
     "sdk/sysvar-id",
-    "sdk/timing-utils",
+    "sdk/time-utils",
     "sdk/transaction-error",
     "send-transaction-service",
     "short-vec",
@@ -482,8 +482,8 @@ solana-sha256-hasher = { path = "sdk/sha256-hasher", version = "=2.2.0" }
 solana-signature = { path = "sdk/signature", version = "=2.2.0", default-features = false }
 solana-slot-hashes = { path = "sdk/slot-hashes", version = "=2.2.0" }
 solana-slot-history = { path = "sdk/slot-history", version = "=2.2.0" }
+solana-time-utils = { path = "sdk/time-utils", version = "=2.1.0" }
 solana-timings = { path = "timings", version = "=2.2.0" }
-solana-timing-utils = { path = "sdk/timing-utils", version = "=2.1.0" }
 solana-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=2.2.0" }
 solana-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=2.2.0" }
 solana-rpc = { path = "rpc", version = "=2.2.0" }
