--- a/sdk/time-utils/Cargo.toml
+++ b/sdk/time-utils/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-timing-utils"
-description = "Timing utilities for Solana"
-documentation = "https://docs.rs/solana-timing-utils"
+name = "solana-time-utils"
+description = "`std::time` utilities for Solana"
+documentation = "https://docs.rs/solana-time-utils"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
