--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -134,6 +134,7 @@ solana-frozen-abi-macro = { workspace = true, optional = true, features = [
     "frozen-abi",
 ] }
 solana-inflation = { workspace = true, features = ["serde"] }
+solana-inner-instruction = { workspace = true, features = ["serde"] }
 solana-instruction = { workspace = true }
 solana-keypair = { workspace = true, optional = true, features = [
     "seed-derivable",
