--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -43,6 +43,7 @@ frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
     "solana-feature-set/frozen-abi",
+    "solana-fee-structure/frozen-abi",
     "solana-account/frozen-abi",
     "solana-inflation/frozen-abi",
     "solana-program/frozen-abi",
