--- a/sdk/fee-structure/Cargo.toml
+++ b/sdk/fee-structure/Cargo.toml
@@ -12,6 +12,9 @@ edition = { workspace = true }
 [dependencies]
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
+solana-frozen-abi = { workspace = true, optional = true, features = [
+    "frozen-abi",
+] }
 solana-native-token = { workspace = true }
 
 [package.metadata.docs.rs]
@@ -23,6 +26,7 @@ rustdoc-args = ["--cfg=docsrs"]
 solana-program = { workspace = true, default-features = false }
 
 [features]
+frozen-abi = ["dep:solana-frozen-abi"]
 serde = ["dep:serde", "dep:serde_derive"]
 
 [lints]
