--- a/compute-budget/Cargo.toml
+++ b/compute-budget/Cargo.toml
@@ -10,17 +10,14 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
+solana-fee-structure = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = [
     "frozen-abi",
 ] }
-solana-fee-structure = { workspace = true }
 solana-program-entrypoint = { workspace = true }
 
 [features]
-frozen-abi = [
-    "dep:solana-frozen-abi",
-    "solana-fee-structure/frozen-abi",
-]
+frozen-abi = ["dep:solana-frozen-abi", "solana-fee-structure/frozen-abi"]
 
 [lints]
 workspace = true
