--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -37,6 +37,7 @@ full = [
     "solana-pubkey/rand",
     "dep:solana-cluster-type",
     "dep:solana-ed25519-program",
+    "dep:solana-compute-budget-instruction",
     "dep:solana-keypair",
     "dep:solana-precompile-error",
     "dep:solana-presigner",
@@ -107,6 +108,10 @@ solana-cluster-type = { workspace = true, features = [
     "serde",
 ], optional = true }
 solana-commitment-config = { workspace = true, optional = true, features = ["serde"] }
+solana-compute-budget-instruction = { workspace = true, optional = true, features = [
+    "borsh",
+    "serde",
+] }
 solana-decode-error = { workspace = true }
 solana-derivation-path = { workspace = true }
 solana-ed25519-program = { workspace = true, optional = true }
