--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -52,6 +52,7 @@ borsh = ["dep:borsh", "solana-program/borsh", "solana-secp256k1-recover/borsh"]
 dev-context-only-utils = [
     "qualifier_attr",
     "solana-account/dev-context-only-utils",
+    "solana-compute-budget-instruction/dev-context-only-utils",
     "solana-transaction-context/dev-context-only-utils",
 ]
 frozen-abi = [
