make keypair functionality of solana-seed-phrase optional

--- a/sdk/seed-phrase/Cargo.toml
+++ b/sdk/seed-phrase/Cargo.toml
@@ -13,10 +13,13 @@ edition = { workspace = true }
 hmac = { workspace = true }
 pbkdf2 = { workspace = true }
 sha2 = { workspace = true }
-solana-signer = { workspace = true, features = ["keypair"] }
+solana-signer = { workspace = true }
 
 [dev-dependencies]
 tiny-bip39 = { workspace = true }
+
+[features]
+keypair = ["solana-signer/keypair"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
