--- a/sdk/seed-phrase/Cargo.toml
+++ b/sdk/seed-phrase/Cargo.toml
@@ -16,9 +16,11 @@ sha2 = { workspace = true }
 solana-signer = { workspace = true }
 
 [dev-dependencies]
+solana-seed-phrase = { path = ".", features = ["dev-context-only-utils"] }
 tiny-bip39 = { workspace = true }
 
 [features]
+dev-context-only-utils = ["keypair"]
 keypair = ["solana-signer/keypair"]
 
 [package.metadata.docs.rs]
