--- a/rpc-client-nonce-utils/Cargo.toml
+++ b/rpc-client-nonce-utils/Cargo.toml
@@ -12,8 +12,12 @@ edition = { workspace = true }
 [dependencies]
 clap = { version = "2.33.0", optional = true }
 solana-clap-utils = { workspace = true, optional = true }
+solana-account = { workspace = true }
+solana-commitment-config = { workspace = true }
+solana-hash = { workspace = true }
+solana-nonce = { workspace = true }
+solana-pubkey = { workspace = true }
 solana-rpc-client = { workspace = true }
-solana-sdk = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
@@ -21,7 +25,10 @@ anyhow = { workspace = true }
 futures = { workspace = true }
 serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
+solana-fee-calculator = { workspace = true }
+solana-program = { workspace = true, default-features = false }
 solana-rpc-client-api = { workspace = true }
+solana-sha256-hasher = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 
 [features]
