--- a/streamer/Cargo.toml
+++ b/streamer/Cargo.toml
@@ -31,10 +31,18 @@ rand = { workspace = true }
 rustls = { workspace = true }
 smallvec = { workspace = true }
 socket2 = { workspace = true }
+solana-keypair = { workspace = true }
 solana-measure = { workspace = true }
 solana-metrics = { workspace = true }
+solana-packet = { workspace = true }
 solana-perf = { workspace = true }
-solana-sdk = { workspace = true }
+solana-pubkey = { workspace = true }
+solana-quic-definitions = { workspace = true }
+solana-sdk = { workspace = true, optional = true }
+solana-signature = { workspace = true }
+solana-signer = { workspace = true }
+solana-time-utils = { workspace = true }
+solana-transaction-error = { workspace = true }
 solana-transaction-metrics-tracker = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
@@ -47,7 +55,7 @@ solana-logger = { workspace = true }
 solana-streamer = { path = ".", features = ["dev-context-only-utils"] }
 
 [features]
-dev-context-only-utils = []
+dev-context-only-utils = ["dep:solana-sdk"]
 
 [lib]
 crate-type = ["lib"]
